# Symplectica

./: .gitignore  FEATURES.md  LICENSE  README.md  package-lock.json  package.json
benchmarks/: quick.json  solar-system.json  stress.json
docs/: FEATURES.md  SOURCES.md
gen1/: index.html
gen10/: index.html
gen11/: ADVANCED.md  ARCHITECTURE.md  PROJECT_SUMMARY.md  index.html
gen12/: CameraController.js  CelestialBody.js  Config.js  InputManager.js  Shaders.js  Utils.js
gen14/: README.md
gen15/: README.md
gen16/: Config.js  EntityManager.js  Main.js  Physics.js  Player.js  Renderer.js
gen17/: Config.js
gen18/: ARCHITECTURE.md  DELIVERY.md  FILE_MANIFEST.md  PROJECT_COMPLETE.md  README.md  index.html
gen2/: index.html
gen20/: index.html
gen22/: index.html
gen24/: README.md  index.html
gen25/: README.md  celestial.js  index.html  physics.js  player.js  styles.css  ui.js
gen26/: index.html
gen27/: COMPLETION.md  INDEX.md  camera.js  config.js  debug.js  index.html  input-handler.js  physics.js  player.js  renderer.js  scene-manager.js  ui.js  utils.js
gen28/: README.md  index.html  styles.css
gen29/: README.md  index.html  styles.css
gen3/: README.md  (+6 more)
gradual_gen/gens/gen3/: Cargo.toml  README.md  package-lock.json  package.json
gradual_gen/gens/gen3/tests/: energy_drift.test.ts  package.json  prng_determinism.test.ts  tsconfig.json  two_body.test.ts
gradual_gen/gens/gen3/world_presets/: earth_moon.json  solar_system.json  two_body_test.json
gradual_gen/gens/gen4/rust/wasm/: Cargo.toml
gradual_gen/gens/gen4/rust/wasm/src/: lib.rs
(+837 files in other folders)
