[package]
name = "solar-sim-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for the solar system simulation physics core"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json = "1"
serde-wasm-bindgen = "0.6"
solar-core = { path = "../core" }
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Performance",
    "Window",
]


